--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
   font-family: "Poppins", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
-  line-height: 1.7;
+  line-height: 1.3;
   background-image: url("../src/assets/bg-texture.png");
 }
 
@@ -116,7 +116,7 @@ img{
 }
 
 /* ------------MEDIA QUERIES (SMALL DEVICES)------------ */
-@media screen and(max-width: 600) {
+@media screen and(max-width: 600px) {
     .container{
         width: var(--container-width-sm);
     }
