--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@
   --transition:all 400ms ease;
 
   --color-light: rgba(255, 255, 255, 0.6);
-  --color-width-lg: 75%;
-  --color-width-md: 86%;
-  --color-width-ms: 90%;
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-ms: 90%;
 }
 html {
   scroll-behavior: smooth;
