--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,11 @@
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
-
-  --transition:all 400ms ease;
-
   --color-light: rgba(255, 255, 255, 0.6);
+  --transition: all 400ms ease;
   --container-width-lg: 75%;
   --container-width-md: 86%;
-  --container-width-ms: 90%;
+  --container-width-sm: 90%;
 }
 html {
   scroll-behavior: smooth;
@@ -32,7 +30,7 @@ body {
   font-family: "Poppins", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
-  line-height: 1.3;
+  line-height: 1.2;
   background-image: url("../src/assets/bg-texture.png");
 }
 
@@ -62,66 +60,66 @@ section > h5 {
   color: var(--color-light);
   text-align: center;
 }
-section > h3 {
-    color: var(--color-primary);
-    margin-bottom: 3rem;
+section > h2 {
+  color: var(--color-primary);
+  margin-bottom: 3rem;
 }
-a{
-    transition: var(--transition);
-    color: var(--color-primary);
-}
-
-a:hover{
-    color: var(--color-white);
+a {
+  transition: var(--transition);
+  color: var(--color-primary);
 }
 
-.text-light{
-    color: var(--color-light);
+a:hover {
+  color: var(--color-white);
 }
 
-.btn{
-    cursor: pointer;
-    border-radius: 0.4rem;
-    width: max-content;
-    color: var(--color-primary);
-    display: inline-block;
-    padding: 0.75rem 1.2rem;
-    border: 1px solid var(--color-primary);
-    transition: var(--transition);
+.text-light {
+  color: var(--color-light);
 }
-.btn:hover{
-    background: var(--color-white);
-    color: var(--color-bg);
-    border-color: transparent;
+
+.btn {
+  cursor: pointer;
+  border-radius: 0.4rem;
+  width: max-content;
+  color: var(--color-primary);
+  display: inline-block;
+  padding: 0.75rem 1.2rem;
+  border: 1px solid var(--color-primary);
+  transition: var(--transition);
 }
-.btn-primary{
-    background: var(--color-primary);
-    color: var(--color-bg);
+.btn:hover {
+  background: var(--color-white);
+  color: var(--color-bg);
+  border-color: transparent;
 }
-img{
-    display: block;
-    width: 100%;
-    object-fit: cover;
+.btn-primary {
+  background: var(--color-primary);
+  color: var(--color-bg);
+}
+img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
 }
 
 /* ------------MEDIA QUERIES (MEDIUM DEVICES)------------ */
 @media screen and(max-width: 1024px) {
-    .container{
-        width: var(--container-width-md);
-    }
+  .container {
+    width: var(--container-width-md);
+  }
 
-    section{
-        margin-top: 6rem;
-    }
+  section {
+    margin-top: 6rem;
+  }
 }
 
 /* ------------MEDIA QUERIES (SMALL DEVICES)------------ */
-@media screen and(max-width: 600px) {
-    .container{
-        width: var(--container-width-sm);
-    }
+@media screen and(max-width: 425px) {
+  .container {
+    width: var(--container-width-sm);
+  }
 
-    section>h2{
-        margin-top: 2rem;
-    }
+  section > h2 {
+    margin-top: 2rem;
+  }
 }
