--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -1,4 +1,4 @@
-.services__conatiner {
+.services__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 3rem;
@@ -43,7 +43,7 @@
 }
 
 @media screen and (max-width: 1024px) {
-    .services__conatiner{
+    .services__container{
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
     }
@@ -53,7 +53,7 @@
 }
 
 @media screen and (max-width: 600px) {
-    .services__conatiner{
+    .services__container{
         grid-template-columns: 1fr;
         gap: 1.5rem;
     }
