--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,3 +1,7 @@
+/* .padding{
+    padding-top: 1rem;
+    text-align: center;
+} */
 .experience_container{
     display: grid;
     grid-template-columns: 1fr 1fr;
