--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,5 +1,5 @@
 nav{
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.3);
     width: max-content;
     display: block;
     padding: 0.7rem 1.7rem;
@@ -26,6 +26,6 @@ nav{
     background: rgba(0, 0, 0, 0.3);
  }
 nav a.active{
-    background: var(--color-bg);
+    background: var(--color-primary);
     color: var(--color-white);
 }
