--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,6 +1,6 @@
 .portfolio__container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 2.5rem;
 }
 .portfolio__item{
@@ -19,7 +19,7 @@
     overflow: hidden;
 }
 .portfolio__item h3{
-    margin: 1.2 0 2rem;
+    margin: 1.2rem 0 2rem;
 }
 .portfolio__item-CTA{
     display: flex;
