--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -69,7 +69,7 @@
   }
   .about__me {
     width: 50%;
-    margin: 2rem;
+    margin: 2rem auto 4rem;
   }
   .about__content p{
     margin: 1rem 0 1.5rem;
